fix house shifting when entering numbers

--- a/styles.css
+++ b/styles.css
@@ -86,9 +86,17 @@ body {
 .house {
     width: 46px;
     height: 54px;
-    position: relative;
-    top: 6px;
+    position: absolute;
+    top: 32px;
     left: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 35px;
+    line-height: 1;
+    vertical-align: middle;
+    text-align: center;
+    font-weight: bold;
 }
 
 .house:first-child {
